--- a/ReviewsBook_RazorPages/wwwroot/css/MyStyle.css
+++ b/ReviewsBook_RazorPages/wwwroot/css/MyStyle.css
@@ -1,11 +1,71 @@
-﻿body {
-}
+﻿/*
+===============
+Fonts
+===============
+*/
+@import url("https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700&display=swap");
+/*
+===============
+Variables
+===============
+*/
 
+
+/*
+    Code Source
+    https://medium.com/@cwrworksite/create-review-page-using-html-and-css-code-e94207a96a26
+*/
+:root {
+    /* dark shades of primary color*/
+    --clr-primary-1: hsl(205, 86%, 17%);
+    --clr-primary-2: hsl(205, 77%, 27%);
+    --clr-primary-3: hsl(205, 72%, 37%);
+    --clr-primary-4: hsl(205, 63%, 48%);
+    /* primary/main color */
+    --clr-primary-5: hsl(205, 78%, 60%);
+    /* lighter shades of primary color */
+    --clr-primary-6: hsl(205, 89%, 70%);
+    --clr-primary-7: hsl(205, 90%, 76%);
+    --clr-primary-8: hsl(205, 86%, 81%);
+    --clr-primary-9: hsl(205, 90%, 88%);
+    --clr-primary-10: hsl(205, 100%, 96%);
+    /* darkest grey - used for headings */
+    --clr-grey-1: hsl(209, 61%, 16%);
+    --clr-grey-2: hsl(211, 39%, 23%);
+    --clr-grey-3: hsl(209, 34%, 30%);
+    --clr-grey-4: hsl(209, 28%, 39%);
+    /* grey used for paragraphs */
+    --clr-grey-5: hsl(210, 22%, 49%);
+    --clr-grey-6: hsl(209, 23%, 60%);
+    --clr-grey-7: hsl(211, 27%, 70%);
+    --clr-grey-8: hsl(210, 31%, 80%);
+    --clr-grey-9: hsl(212, 33%, 89%);
+    --clr-grey-10: hsl(210, 36%, 96%);
+    --clr-white: #fff;
+    --clr-red-dark: hsl(360, 67%, 44%);
+    --clr-red-light: hsl(360, 71%, 66%);
+    --clr-green-dark: hsl(125, 67%, 44%);
+    --clr-green-light: hsl(125, 71%, 66%);
+    --clr-black: #222;
+    --ff-primary: "Roboto", sans-serif;
+    --ff-secondary: "Open Sans", sans-serif;
+    --transition: all 0.3s linear;
+    --spacing: 0.1rem;
+    --radius: 0.25rem;
+    --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    --max-width: 1170px;
+    --fixed-width: 620px;
+}
 .LoginLabel {
     font-weight: bold;
+    font-style:italic;
     font-size: 24pt;
-    font-family: Arial;
+    font-family: var(--ff-primary);
+    color: var(--clr-primary-3);
     background-color: transparent;
+    letter-spacing: var(--spacing);
+
 }
 
 .DatetimeLabel {
@@ -13,15 +73,18 @@
     font-size: 16pt;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: transparent;
+    color: var(--clr-grey-4);
     float: right;
 }
 
 .TextReviewLabel {
     font-size: 14pt;
     font-weight: normal;
-    font-family: monospace;
+    font-family: var(--ff-secondary);
     background-color: azure;
     border-radius: 10px 10px;
+    color: var(--clr-grey-1);
+    
 }
 
 .NoOneReviewLabel {
@@ -32,6 +95,7 @@
     display: flex;
     align-content: center;
     vertical-align: central;
+    color: var(--clr-primary-5);
 }
 
 .widthfull {
